<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black"
    android:paddingStart="@dimen/margin_16"
    android:paddingEnd="@dimen/margin_16">

    <TextView
        android:id="@+id/auth_title"
        style="@style/Text.H1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/welcome"
        android:textColor="@color/light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/auth_subtitle"
        style="@style/Text.Content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/authorization_subtitle"
        android:textColor="@color/light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auth_login_input_layout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:hint="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_login_edit_text"
            style="@style/Text.Content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auth_password_input_layout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_login_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_password_edit_text"
            style="@style/Text.Content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/auth_error_text"
        style="@style/Text.Content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_password_input_layout"
        tools:text="@string/error_try_later"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auth_login_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/auth_button_bg"
        android:text="@string/enter"
        android:textColor="@color/auth_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
